<resources>
    <string name="app_name">GO Navigator</string>
    <string name="setup_required_help_text">Enter the following code on the Google sign-in page:</string>
    <string name="disclaimer">It is recommend that you do not use the same Google account that is used to play Pokémon GO. We accept no responsibility if your PoGo account happens to get suspended from using this. Be careful.</string>
    <string name="invert">Invert</string>
    <string name="none">None</string>
    <string name="all">All</string>
    <string name="open_sign_in_modal">Open sign-in modal</string>
    <string name="copy">Copy</string>
    <string name="action_settings">Settings</string>
    <string name="action_filters">Alerts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_in_using_the_pok_mon_trainer_club">Sign in using the Pokémon Trainer Club.</string>
    <string name="authenticate_with_ptc">Authenticate with PTC</string>
    <string name="username">Username</string>
    <string name="authenticate_with_a_google_device_code">Authenticate with a Google device code</string>
    <string name="reset_authentication_credentials">Reset authentication credentials</string>
    <string name="reset_authentication_credentials_desc">If you need to reset your authentication credentials and return to the first-run setup screen, use the option below.</string>
    <string name="unknown_service_state">Unknown service state</string>
    <string name="first_run_setup">First-run setup</string>
    <string name="first_run_setup_desc">You are required to authenticate via PTC or Google to use this app. You do not need to use the same credentials you use for Pokemon GO.</string>
    <string name="accept_tos">Accept ToS</string>
    <string name="accept_tos_desc">If you are unable to find any Pokémon, you may have not accepted the ToS yet. This is accepted for you when you first sign in to this app, but just in case...</string>
</resources>
